--- a/index.html
+++ b/index.html
@@ -1,72 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="ru">
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <img src="/logo.png" alt="Логотип">
-        <nav>
-            <ul>
-                <li>Главная</li>
-                <li>Программы</li>
-                <li>Контакты</li>
-            </ul>
-        </nav>
-    </header>
-
-    <aside>
-        <p>Статья1</p>
-        <p>Статья2</p>
-        <p>Статья3</p>
-    </aside>
-
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Моё описание</title>
+  </head>
+  <body>
     <main>
-        <h1>Резюме</h1>
-        <h2>Разработчик веб-приложений</h2>
-        <section class="study">
-            <h2>Образование</h2>
-            <ul>
-                <li class="place-of-study-1">Место учёбы №1</li>
-                <li class="place-of-study-2">Место учёбы №2</li>
-                <li class="place-of-study-3">Место учёбы №3</li>
-            </ul>
-        </section>
-        <section class="works">
-            <h2>Примеры работ</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>№</th>
-                        <th>Название работы</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Моя классная работа</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Моя классная работа</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Моя классная работа</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+      <h1>Торшхоев Хамза</h1>
+      <h2>Frontend-разработчик</h2>
+      <section>
+        <h2>Образование</h2>
+        <ul>
+          <li>Московский государственный строительный университет. Направление: Промышлено-гражданское строительство</li>
+          <li>Онлайн-школа компьютерных наук "Хекслет". Специальность: Frontend-разработчик.</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Навыки</h2>
+         <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Дополнительная информация</h2>
+        <p>1.5 года работал в компании "Саузнет" подрядчиком и составителем исполнительных документаций. Ещё год работал изготовителем, сборщиком и установщиком
+          мебельных изделий. Сейчас начинаю заниматься web-разработкой.
+        </p>
+      </section>
     </main>
-
-    <script src="js/app.js"></script>
-</body>
+  </body>
 </html>
-
-
-
-
